--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <activity
+            android:name="com.example.korisnik.example13kurs.FirstActivity"
+            android:label="@string/app_name">
+        </activity>
+
     </application>
 
 </manifest>
