--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
 
         <activity
             android:name="com.example.korisnik.example13kurs.SecondActivity"
-            android:label="@string/second_activity">
+            android:label="@string/app_name">
         </activity>
 
         <activity
